--- a/src/css/style.css
+++ b/src/css/style.css
@@ -154,7 +154,7 @@ header {
   cursor: pointer;
 }
 
-/* Style Podcast.js */
+/* Style Podcast.js & Episode.js */
 
 .show {
   flex: 0 0 280px;
@@ -171,7 +171,7 @@ header {
   font-size: 1.4rem;
 }
 
-.show > h1 {
+.show h1 {
   font-size: 1.8rem;
 }
 
