--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,6 +47,23 @@ button:hover {
   color: var(--custom-color);
 }
 
+.shake:hover {
+  animation: shake-left-right 0.5s;
+  transform: translate(0, 0);
+}
+
+@keyframes shake-left-right {
+  10%,
+  60% {
+    transform: translate(-1px, 0);
+  }
+
+  30%,
+  90% {
+    transform: translate(1px, 0);
+  }
+}
+
 .material-icons {
   cursor: pointer;
 }
@@ -63,11 +80,43 @@ button:hover {
   display: flex;
 }
 
+.title1,
+.title2 {
+  text-decoration: none;
+  font-size: 1.2rem;
+  white-space: nowrap;
+  width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.title1 {
+  font-weight: bold;
+  margin-bottom: 3px;
+}
+
+.title3 {
+  text-decoration: none;
+  font-size: 1.4rem;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 90%;
+  margin-bottom: 3px;
+}
+
+.title4 {
+  font-size: 1.2rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 90%;
+}
+
 /* Style Home.js */
 
 .home-cover {
-  background: center / cover no-repeat url("./images/home-cover.png");
-  height: 900px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -94,7 +143,7 @@ button:hover {
 footer {
   margin-top: 40px;
   margin-bottom: 130px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 1.4rem;
   display: flex;
   align-items: center;
@@ -111,8 +160,6 @@ footer {
 /* Style NotFound.js */
 
 .not-found-cover {
-  background: center / cover no-repeat url("./images/404-cover.png");
-  height: 900px;
   display: flex;
   justify-content: center;
   font-family: 'Rubik', sans-serif;
@@ -135,7 +182,7 @@ header {
   background-color: rgba(255, 255, 255, 0.8);
 }
 
-.navbar-bg {
+.navbar {
   max-width: 1200px;
   width: 100%;
   height: 60px;
@@ -148,18 +195,18 @@ header {
   margin: 0 auto;
 }
 
-.navbar-bg a {
+.navbar a {
   text-decoration: none;
 }
 
-.navbar-bg > div {
+.navbar > div {
   border-left: 1px solid #dbdbdb;
-  padding-left: 3rem;
-  padding-right: 3rem;
+  padding-left: 30px;
+  padding-right: 30px;
   line-height: 60px;
 }
 
-.navbar-bg > div:first-of-type {
+.navbar > div:first-of-type {
   border-left: none;
 }
 
@@ -167,7 +214,17 @@ header {
   color: var(--custom-color);
   font-family: 'Carter One', cursive;
   font-size: 2.6rem;
+  padding-left: 18px;
+  padding-right: 18px;
+}
+
+.navbar-logo-bg {
   letter-spacing: 1.2px;
+}
+
+.navbar-logo-sm {
+  font-size: 3.6rem;
+  line-height: 70px;
 }
 
 .material-icons.custom-color {
@@ -183,7 +240,7 @@ header {
   height: 50px;
   max-width: 600px;
   width: 100%;
-  padding-left: 5px;
+  padding-left: 8px;
   font-size: 1.6rem;
   font-family: 'Noto Serif', serif;
   background-color: rgba(255, 255, 255, 0.2);
@@ -204,19 +261,22 @@ header {
 
 .matched-container1 > div:first-child {
   padding-left: 15px;
+  padding-right: 15px;
   margin-top: 5px;
   margin-bottom: 5px;
 }
 
-.navbar-bg > .customize-color {
+.navbar > .customize-color {
   position: relative;
   height: 60px;
-  padding-left: 60px;
-  padding-right: 60px;
+  padding-left: 42px;
+  padding-right: 42px;
 }
 
 .customize-color > i:first-child {
   line-height: 60px;
+  padding-left: 18px;
+  padding-right: 18px;
 }
 
 .color-picker {
@@ -226,12 +286,13 @@ header {
   position: absolute;
   top: 60px;
   left: 0;
-  width: 100%;
+  min-width: 140px;
   background-color: #fff;
   border-radius: 0 0 5% 5%;
 }
 
-.customize-color:hover .color-picker {
+.customize-color:hover .color-picker,
+.customize-color:active .color-picker {
   visibility: visible;
   opacity: 1;
 }
@@ -275,6 +336,10 @@ header {
 
 /* Style Podcast.js & Episode.js */
 
+.podcast-episode-container {
+  display: flex;
+}
+
 .show {
   flex: 0 0 280px;
   display: flex;
@@ -299,6 +364,7 @@ header {
   height: 150px;
 }
 
+/*
 .subscribe-btn {
   background-color: #000;
   color: #fff;
@@ -309,6 +375,7 @@ header {
   outline: 0;
   cursor: pointer;
 }
+*/
 
 .podcast-links {
   margin-top: 3px;
@@ -401,7 +468,6 @@ header {
 
 .player {
   max-width: 1200px;
-  min-width: 768px;
   width: 100%;
   height: 100%;
   margin: 0 auto;
@@ -425,25 +491,9 @@ header {
   height: 50px;
 }
 
-.title1,
-.title2 {
-  text-decoration: none;
-  font-size: 1.2rem;
-  white-space: nowrap;
-  width: 200px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.title1 {
-  font-weight: bold;
-  margin-bottom: 3px;
-}
-
 .player-controls {
   margin-right: 30px;
   margin-left: 60px;
-  width: 600px;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -570,7 +620,7 @@ header {
 
 .show-preview {
   display: flex;
-  margin: 20px 20px;
+  margin: 20px;
 }
 
 .show-preview > div:last-child {
@@ -583,25 +633,6 @@ header {
 .artwork-sm {
   width: 50px;
   height: auto;
-}
-
-.title3 {
-  text-decoration: none;
-  font-size: 1.4rem;
-  font-weight: bold;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  width: 90%;
-  margin-bottom: 3px;
-}
-
-.title4 {
-  font-size: 1.2rem;
-  white-space: nowrap;
-  width: 90%;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 /* Style PodcastCardStyleC.js */
@@ -617,9 +648,13 @@ header {
 
 /* Style EpisodeCardStyleB.js */
 
+.inline {
+  display: inline !important;
+}
+
 .episode-preview {
   display: flex;
-  margin: 20px 20px;
+  margin: 20px;
 }
 
 .episode-preview > * {
@@ -635,7 +670,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 30px;
+  margin-left: 30px;
   width: 90%;
 }
 
@@ -667,6 +702,174 @@ header {
   margin-right: 10px;
 }
 
-.hl {
+.ln-search-highlight {
   background-color: #dbdbdb;
+}
+
+/* Make the website responsive */
+
+@media (min-width: 769px) {
+  .navbar-logo-sm {
+    display: none;
+  }
+
+  .home-cover {
+    background: center / cover no-repeat url("./images/home-cover-bg.png");
+    height: 900px;
+  }
+
+  .not-found-cover {
+    background: center / cover no-repeat url("./images/404-cover-bg.png");
+    height: 900px;
+  }
+
+  .player-controls {
+    width: 600px;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar-logo-bg {
+    display: none;
+  }
+
+  .navbar > div {
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+
+  .navbar > .customize-color {
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+
+  .color-picker {
+    left: -80px;
+  }
+
+  .show-preview {
+    margin: 10px;
+  }
+
+  .show-preview > div:last-child {
+    padding-left: 10px;
+    width: 100%;
+  }
+
+  .title3,
+  .title4 {
+    width: 80%;
+  }
+
+  .home-cover {
+    background: center / cover no-repeat url("./images/home-cover-md.png");
+    height: 800px;
+  }
+
+  .not-found-cover {
+    background: center / cover no-repeat url("./images/404-cover-md.png");
+    height: 800px;
+  }
+
+  .episode-info {
+    padding-right: 10px;
+    flex: 0 0 auto;
+  }
+
+  .artwork-in-player {
+    width: 40px;
+    height: 40px;
+  }
+
+  .titles-in-player {
+    display: none;
+  }
+
+  .player-controls {
+    margin-left: 15px;
+    width: 90%;
+  }
+
+  #playPause {
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+
+  .speed {
+    width: 30px;
+  }
+
+  .matched-container2 > * {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .matched-results {
+    padding-left: 0;
+  }
+
+  .no-match-prompt {
+    margin-left: 0;
+  }
+
+  .filter > * {
+    margin-left: 0;
+  }
+
+  .episode-preview > *:nth-child(2) {
+    margin-left: 15px;
+  }
+
+  .podcast-episode-container {
+    flex-direction: column;
+  }
+
+  .show {
+    margin-left: 5px;
+    flex: 1 1 auto;
+    border-bottom: 1px solid #dbdbdb;
+  }
+
+  .podcast-links,
+  .more-info {
+    display: none;
+  }
+
+  .episodes {
+    margin-left: 5px;
+    margin-right: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
+
+@media (max-width: 480px) {
+  .home-cover {
+    background: center / cover no-repeat url("./images/home-cover-sm.png");
+    height: 640px;
+  }
+
+  .home-cover > span:first-child {
+    font-size: 5.2rem;
+  }
+
+  .not-found-cover {
+    background: center / cover no-repeat url("./images/404-cover-sm.png");
+    height: 640px;
+  }
+
+  .not-found-cover > span:first-child {
+    font-size: 3rem;
+    margin-top: 300px;
+  }
+}
+
+@media (min-height: 800px) {
+  .home-cover > span:first-child {
+    margin-top: 420px;
+  }
+
+  .not-found-cover > span:first-child {
+    margin-top: 420px;
+  }
 }
