--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,88 @@ ol, ul {
 
 /* End of CSS reset */
 
+/* Fonts */
+
+@font-face {
+  font-family: 'Noto Serif';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/noto-serif-v6-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Noto Serif'), local('NotoSerif'),
+       url('./fonts/noto-serif-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/noto-serif-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/noto-serif-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/noto-serif-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/noto-serif-v6-latin-regular.svg#NotoSerif') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/open-sans-v15-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Open Sans Regular'), local('OpenSans-Regular'),
+       url('./fonts/open-sans-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/open-sans-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/open-sans-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/open-sans-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/open-sans-v15-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'Carter One';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/carter-one-v10-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Carter One'), local('CarterOne'),
+       url('./fonts/carter-one-v10-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/carter-one-v10-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/carter-one-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/carter-one-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/carter-one-v10-latin-regular.svg#CarterOne') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 300;
+  src: url('./fonts/rubik-v7-latin-300.eot'); /* IE9 Compat Modes */
+  src: local('Rubik Light'), local('Rubik-Light'),
+       url('./fonts/rubik-v7-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/rubik-v7-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/rubik-v7-latin-300.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/rubik-v7-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/rubik-v7-latin-300.svg#Rubik') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/rubik-v7-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Rubik'), local('Rubik-Regular'),
+       url('./fonts/rubik-v7-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/rubik-v7-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/rubik-v7-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/rubik-v7-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/rubik-v7-latin-regular.svg#Rubik') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 700;
+  src: url('./fonts/rubik-v7-latin-700.eot'); /* IE9 Compat Modes */
+  src: local('Rubik Bold'), local('Rubik-Bold'),
+       url('./fonts/rubik-v7-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/rubik-v7-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/rubik-v7-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/rubik-v7-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/rubik-v7-latin-700.svg#Rubik') format('svg'); /* Legacy iOS */
+}
+
+/* Shared styles */
+
 :root {
   --custom-color: #ce0925;
   --font-color: #000;
@@ -223,8 +305,8 @@ header {
 
 .navbar-logo {
   color: var(--custom-color);
-  font-family: 'Carter One', cursive;
   font-size: 2.6rem;
+  font-family: 'Carter One', sans-serif;
   padding-left: 18px;
   padding-right: 18px;
 }
